# bs-bingo

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .example-env  Cargo.toml  dockerfile  sqlx-data.json
api/migrations/: 20220706213230_init.down.sql  20220706213230_init.up.sql  20220716081827_players.down.sql  20220716081827_players.up.sql  20220813101638_notify.down.sql  20220813101638_notify.up.sql  20220813142645_notification_fix.down.sql  20220813142645_notification_fix.up.sql  20220819191812_variable_grid_size.down.sql  20220819191812_variable_grid_size.up.sql  20220821083016_notify_on_delete_player.down.sql  20220821083016_notify_on_delete_player.up.sql
api/src/: body.rs  error.rs  main.rs  pg_listen.rs  server.rs
api/src/handler/: auth.rs  game.rs  mod.rs  template.rs
api/src/handler/game/: access.rs  field.rs  mod.rs  player.rs  websocket.rs
web/: .env  .prettierignore  Dockerfile copy  dockerfile  index.html  nginx copy.conf  nginx.conf  package-lock.json  package.json  prettier.config.cjs  svelte.config.js  tailwind.config.cjs
web/src/: App.svelte  api.svelte  store.svelte
web/src/components/: Button.svelte  Nav.svelte  Sackbar.svelte  Snackbar.svelte  Templates.svelte
web/src/routes/: CreateTemplate.svelte  Game.svelte  Home.svelte  Play.svelte  Templates.svelte
web/src/style/: main.scss  var.scss
