[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers", "ws"] }
axum-extra = { version = "0.3", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
headers = "0.3"
http = "0.2"
itertools = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "offline"] }
time = "0.3"
tokio = { version = "1.0", features = ["full", "sync"] }
tower = {version="0.4", features = ["filter"]}
tower-http = {version="0.2", features = ["trace", "cors"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = {version = "0.8", features = ["serde", "v4", "v5"]}
ringbuf = "0.2.8"
ring-channel = "0.11.0"